@@ -129,7 +129,7 @@ members_of {
 
 google_analytics_id {
   desc "Configure Google Analytics tracking code to be inserted in Shiny application pages.";
-  param String gaid "The Google tracking ID, for example, UA-18988-1";
+  param String gaid "The Google tag ID, for example, G-123ABCD";
   at $ server location;
   internal true;  # Probably shouldn't document this since it will change soon
 }
